[Massive] Start hooking up packets in web frontend, overhaul main_thread_post, implement C libdill HTTP & WS server and cmake build web buildstep

--- a/NativeTimelapseGenerator/web/index.html
+++ b/NativeTimelapseGenerator/web/index.html
@@ -10,7 +10,6 @@
 	<title>NativeTimelapseGenerator Control Panel</title>
 </head>
 <body>
-	<control-panel></control-panel>
-	<div id="layoutContainer"></div>
+	<control-panel id="layoutContainer"></control-panel>
 </body>
 </html>
